	  other things (Stu Tomlinson)
	* Show timestamps now has a per-conversation option in addition
	  to the global one, bringing it in line with the other conver-
	  sation options (Stu Tomlinson).
	* Added MSN buddy icons (Felipe Contreras)
	* Added MSN file transfer (Felipe Contreras)
	* MSN's idle state now actually sets a buddy idle.

	Bug Fixes:
	* Non-looping animated icons no longer cause Gaim to freeze
	* Fixed a crash in SILC that sometimes happened when resolving
	  the buddy list (Pekka Riikonen)
	* Parallel compiles of the perl plugin should work better
	  (Stu Tomlinson)
	* The disconnected UI op was called twice on connection errors. Now
	  it is only called once. (Evan Schoenberg).

version 0.78 (05/30/2004):
	New Features:
	* Support for the SILC protocol (http://www.silcnet.org/)
	  (Pekka Riikonen)
	* Option to suppress disconnect notification when using
	  the autoreconnect plugin (Christopher (siege) O'Brien)
	* Added support for dragging buddies from the buddy list into the
	  Add Buddy Pounce dialog
	* Pounce notification now includes time (Mike Lundy)
	* The history plugin now shows history for chats in addition to IMs
	* Menu item to view conversation logs (Tom Samstag)
	* Conversation and chat sizes automatically saved (Stu Tomlinson)
	* Added support for Novell privacy settings (Mike Stoddard of Novell)
	* Added ability to initiate multi-user conferences (chats) in Novell (Mike
	  Stoddard of Novell)
	* Find and Save buttons on the debug window (Stu Tomlinson)
	* Plugin Actions menu (Christopher (siege) O'Brien)
	* Plugins can now add entries to the right-click menu of a group or chat
	  (Stu Tomlinson and Christopher (siege) O'Brien)
	* Hyperlink colors are now themeable via your ~/.gtkrc-2.0 file

	Bug Fixes:
	* Compiles again with gcc 2.96 (Ignacio J. Elia)
	* Gtk2.0 compatibility fixes (Tim Ringenbach)
	* Many documentation updates (Jonathan Champ, Gary Kramlich,
	  Stu Tomlinson, and Kevin Stange)